discussion/kv_engine/145405/145405_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43818: Use throwWithTrace for Monotonic

Change-Id: I3d79e3ff42ecfe2d449fc68382db3b893534bf28

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-02-08 11:39:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-08 11:57:46.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6986/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/monotonic.h:50:13: error: no member named "throwWithTrace" in namespace "cb" [clang-diagnostic-error]
        cb::throwWithTrace(std::logic_error(
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6986/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/monotonic.h:50:13:
error: no member named "throwWithTrace" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6986/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33457/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\monotonic.h(50): error C2039: "throwWithTrace": is not a member of "cb" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33457/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28783/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/monotonic.h:50:13:
error: no member named "throwWithTrace" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28783/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7628/ : FAILURE

Compile error at [2021-02-08T11:41:05.495Z] ../kv_engine/engines/ep/src/monotonic.h:50:13:
error: no member named "throwWithTrace" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7628/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8575/ : FAILURE

Compile error at [2021-02-08T11:48:44.657Z] ../kv_engine/engines/ep/src/monotonic.h:50:13:
error: ?throwWithTrace? is not a member of ?cb?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8575/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8707/ : FAILURE

Compile error at [2021-02-08T11:55:42.521Z] ../kv_engine/engines/ep/src/monotonic.h:50:13:
error: ?throwWithTrace? is not a member of ?cb?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8707/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8919/ : FAILURE

Compile error at [2021-02-08T11:52:18.447Z] ../kv_engine/engines/ep/src/monotonic.h:50:13:
error: no member named "throwWithTrace" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8919/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16464/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5522/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
